Fix dashboard description spacing

--- a/src/components/views/css/Application.css
+++ b/src/components/views/css/Application.css
@@ -15,10 +15,10 @@ p {
     line-height: 1.3;
 }
 
-p:first-child {
+p:first-of-type:not(:only-of-type) {
     margin-top: 0;
 }
 
-p:last-child {
+p:last-of-type:not(:only-of-type) {
     margin-bottom: 0;
 }
